--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <tr>
             <td>8</td>
             <td>Clínicas ambulatorias o consultorios populares.</td>
-            <td><a href="https://drive.google.com/file/d/1yyrrDX9RjyiiDD9TX7DH1kS24qpjTsnW/view?usp=sharing" target="_blank">ver</a></td>
+            <td><a href="https://drive.google.com/file/d/1tTQXORNdH-6SwJvp-wvOO3aPqaApr90f/view?usp=drive_link" target="_blank">ver</a></td>
         </tr>
         <tr>
             <td>9</td>
